--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -12,3 +12,7 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/btn';
+@import 'blocks/title';
+@import 'blocks/advantages';
+@import 'blocks/consultation';
+@import 'blocks/forms';
