--- a/src/sass/blocks/_btn.scss
+++ b/src/sass/blocks/_btn.scss
@@ -21,4 +21,12 @@
         height: 50px;
         font-size: 16px;
     }
+
+    &_mini {
+        width: 135px;
+        height: 44px;
+        font-size: 14px;
+        line-height: 22px;
+
+    }
 }
