--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -3,6 +3,15 @@
     justify-content: space-between;
     align-items: center;
 
+    @media screen and (max-width: 1024px) {
+        padding: 0 20px;
+    }
+
+    @media screen and (max-width: 768px) {
+        flex-direction: column;
+        gap: 20px;
+    }
+
     &__logo {
         width: 250px;
 
@@ -20,6 +29,10 @@
         span {
             display: block;
             font-size: 18px;
+        }
+
+        @media screen and (max-width: 768px) {
+            display: none;
         }
     }
 
