--- a/src/sass/blocks/_advantages.scss
+++ b/src/sass/blocks/_advantages.scss
@@ -8,13 +8,17 @@
         display: flex;
         justify-content: space-around;
 
+        @media screen and (max-width: 768px) {
+            flex-direction: column;
+            align-items: center;
+            gap: 30px;
+        }
+
     }
 
     &__item {
         width: 277px;
         text-align: center;
-
-        img {}
     }
 
     &__desc {
