--- a/src/sass/blocks/_title.scss
+++ b/src/sass/blocks/_title.scss
@@ -8,8 +8,23 @@
 
     &_left {
         font-size: 36px;
-        text-align-last: left;
+        text-align: left;
         line-height: 54px;
         color: rgb(255, 255, 255);
+
+        @media screen and (max-width: 1024px) {
+            font-size: 32px;
+            line-height: 48px;
+        }
+
+        @media screen and (max-width: 768px) {
+            font-size: 28px;
+            line-height: 42px;
+        }
+
+        @media screen and (max-width: 576px) {
+            font-size: 24px;
+            line-height: 36px;
+        }
     }
 }
