--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -9,7 +9,7 @@
     margin: 0 auto;
 
     @media screen and (max-width: 1024px) {
-        padding: 0 15px;
+        padding: 0 20px;
     }
 }
 
@@ -22,3 +22,4 @@
 @import 'blocks/forms';
 @import 'blocks/carousel';
 @import 'blocks/catalog';
+@import 'blocks/feedback';
