--- a/src/sass/blocks/_consultation.scss
+++ b/src/sass/blocks/_consultation.scss
@@ -12,4 +12,15 @@
 
         @media screen and (max-width: 1024px) {}
     }
+
+    .error {
+        border: 1px solid red;
+    }
+
+    label.error {
+        color: white;
+        border: none;
+        text-align: center;
+        margin-bottom: 15px;
+    }
 }
